<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/aplikasi_ekskul"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/nisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_nis" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/classLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_class" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerClass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_background" />

            <TextView
                android:id="@+id/birthDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/genderLabel" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maleLabel"
                        android:layout_marginEnd="16dp"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femaleLabel" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/extracurricularLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/extracurricularLabel" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basketLabel" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/footballLabel" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swimmingLabel" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chessLabel" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debateLabel" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dramaLabel" />
            </LinearLayout>

            <TextView
                android:id="@+id/scheduleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_schedule" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSchedule"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_background" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
