<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_detail"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_detail"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="John Doe"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/nisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_nis" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="L200213321"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/classLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_class" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kelas A"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/birthDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="07/07/2002"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genderLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Laki-laki"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/extracurricularLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_extracurricular" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutExtracurricular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputExtracurricular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sepak Bola"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/scheduleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_input_schedule" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Senin Siang"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>